# SFML_Hexxagon_clone

./: CMakeLists.txt  main.cpp
Board/: Hex.cpp
src/: AI.cpp  AI.h  Background.cpp  Background.h  GameManager.cpp  GameManager.h  GameSaver.cpp  GameSaver.h  GameState.h  Move.cpp  Move.h  Owner.h  main.cpp
src/Background/: Background.cpp  Background.h  Star.cpp  Star.h
src/Board/: Board.cpp  Board.h  Hex.cpp  Hex.h  Scoreboard.cpp  Scoreboard.h
src/Board/Hex/: Hex.cpp  Hex.h  HexState.h
src/OptionsAndMenu/: Button.cpp  Button.h  MainMenu.cpp  MainMenu.h  MainMenuState.h  MenuState.h
